--- a/index.html
+++ b/index.html
@@ -12,8 +12,41 @@
 
     <div id="root">
 
+        <!-- creiamo un container flex per accostare l'immagine in evidenza alla scletta di anteprima img. -->
+        <div class="container">
 
-        
+            <!-- qui la sezione principale con l'immagine selezionata, il nome del paese ed una didascalia. -->
+            <section class="master">
+
+                <img src="" alt="">
+                <h2></h2>
+                <p></p>
+
+            </section>
+
+        </div>
+
+        <!-- qui la scaletta di img in anteprima. -->
+        <div class="preview">
+
+            <img src="" alt="">
+
+
+            <!-- i bottoni che ci permetteranno di scorrere tra le img -->
+            <button class="up">
+                <i class="fas fa-chevron-up"></i>
+            </button>
+    
+            <button class="down">
+                <i class="fas fa-chevron-down"></i>
+            </button>
+
+        </div>
+
+
+
+
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
