--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
             </div>
             
         </div>
+
+        <div v-for="numb in counter" class="counter">
+            <p>{{numb}}</p>
+        </div>
         
 
     </div>
