--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
                 <section v-for="country in countries">
 
+                    <!-- se cambio il valore di counter, cambio indice a countries...-Come cambio valore a counter?-Che succede se a section applico un ciclo in counter (impostando il valore di counter a 5) assieme al ciclo presente?-No, se li stampo tutti sono punto e da capo!-Ma se applico una funzione a counter, che ne cambia il valore al click, allo stesso click che mi evidenzia l'img in anteprima, allora countries[counter] equivarrebbe ad identificare l'oggetto specifico country che voglio qui...ma si può fare anche con index, o mi serve un counter? -->
                     <img :src="countries[counter].image" alt="">
                     <div class="text">
                         <h2>{{countries[counter].name}}</h2>
