--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <i class="fas fa-chevron-up"></i>
                 </button>
                 
-                <button class="down">
+                <button @click="nextImg" class="down">
                     <i class="fas fa-chevron-down"></i>
                 </button>
                 
