--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -50,7 +50,7 @@
         <!-- Bottone per avviare il play -->
         <div class="auto_play">
 
-            <button @click="playNext" class="play">
+            <button @click="playFormer" class="play">
                 <i class="fas fa-play"></i>
             </button>
 
